aggiunta licenza CC-BY. ampliato testo sezione richieste.

--- a/index.html
+++ b/index.html
@@ -147,6 +147,29 @@
 					</p>
 				</div>
 			</div>
+
+			<div class="page-header">
+				<h3 class="text-centered">
+					Perché?
+				</h3>
+			</div>
+
+			<div class="row">
+				<div class="col-lg-12">
+					<p>
+						Ad oggi l'acquisto di un nuovo computer comporta quasi sempre anche l'acquisto coatto di un altro prodotto: la licenza del sistema operativo. Tale costo aggiuntivo è solitamente invisibile, nascosto al consumatore, mascherato come parte integrante dell'oggetto. Eppure c'è, e si paga.
+					</p>
+					<p>
+						Ma che succede se hai già un'altra licenza (magari acquisita insieme ad un altro PC che nel frattempo si è rotto)? O se vuoi un sistema operativo diverso da quello imposto? O se vuoi quello stesso sistema ma di un'altra versione, che puoi comprare separatamente?
+					</p>
+					<p>
+						Anche tu paghi un sistema che non vuoi, che non usi, che non sfrutti.
+					</p>
+					<p>
+						Anche tu paghi un sistema inoperativo.
+					</p>
+				</div>
+			</div>
 		</div>
 	</section>
 
@@ -251,6 +274,7 @@
 			</div>
 			<div class="col-lg-6 text-right">
 				<p>Powered by <a href="http://www.ils.org/">Italian Linux Society</a></p>
+				<p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Licenza Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a></p>
 			</div>
 		</div>
 	</section>
@@ -260,21 +284,21 @@
 	<script src="js/jquery.easing.min.js"></script>
 	<script src="js/scrolling-nav.js"></script>
 
-<!-- Piwik -->
-<script type="text/javascript">
-  var _paq = _paq || [];
-  _paq.push(['trackPageView']);
-  _paq.push(['enableLinkTracking']);
-  (function() {
-    var u=(("https:" == document.location.protocol) ? "https" : "http") + "://pergamena.lugbs.linux.it/";
-    _paq.push(['setTrackerUrl', u+'piwik.php']);
-    _paq.push(['setSiteId', 16]);
-    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0]; g.type='text/javascript';
-    g.defer=true; g.async=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
-  })();
-</script>
-<noscript><p><img src="http://pergamena.lugbs.linux.it/piwik.php?idsite=16" style="border:0;" alt="" /></p></noscript>
-<!-- End Piwik Code -->
+	<!-- Piwik -->
+	<script type="text/javascript">
+		var _paq = _paq || [];
+		_paq.push(['trackPageView']);
+		_paq.push(['enableLinkTracking']);
+		(function() {
+			var u=(("https:" == document.location.protocol) ? "https" : "http") + "://pergamena.lugbs.linux.it/";
+			_paq.push(['setTrackerUrl', u+'piwik.php']);
+			_paq.push(['setSiteId', 16]);
+			var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0]; g.type='text/javascript';
+			g.defer=true; g.async=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+		})();
+	</script>
+	<noscript><p><img src="http://pergamena.lugbs.linux.it/piwik.php?idsite=16" style="border:0;" alt="" /></p></noscript>
+	<!-- End Piwik Code -->
 
 </body>
 
