--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 	<meta name="twitter:creator" content="@ItaLinuxSociety" />
 	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:url" content="http://www.sistemainoperativo.it/" />
-	<!-- <meta name="twitter:image" content="http://www.sistemainoperativo.it/img/tw.png" /> -->
+	<meta name="twitter:image" content="http://www.sistemainoperativo.it/img/tw.png" />
 
 	<meta property="og:site_name" content="#SistemaInoperativo" />
 	<meta property="og:title" content="#SistemaInoperativo" />
 	<meta property="og:url" content="http://www.sistemainoperativo.it/" />
-	<!-- <meta property="og:image" content="http://www.sistemainoperativo.it/img/fb.png" /> -->
+	<meta property="og:image" content="http://www.sistemainoperativo.it/img/fb.png" />
 	<meta property="og:type" content="website" />
 	<meta property="og:country-name" content="Italy" />
 	<meta property="og:email" content="webmaster@linux.it" />
