--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<meta property="og:locale" content="it_IT" />
 	<meta property="og:description" content="Fatti Rimborsare il Sistema (in)Operativo!" />
 
-	<title>fatti rimborsare il sistema (in)operativo!</title>
+	<title>Chiedi il rimborso del sistema (in)operativo!</title>
 
 	<link href="css/bootstrap.css" rel="stylesheet">
 	<link href="css/scrolling-nav.css" rel="stylesheet">
@@ -76,11 +76,11 @@
 					<h3>
 						hai comprato un nuovo PC<br />
 						hai pagato la licenza Windows<br />
-						ma non hai intenzione di usarlo
+						ma non hai intenzione di usarlo?
 					</h3>
 
 					<h1>
-						FATTI RIMBORSARE IL<br />SISTEMA (IN)OPERATIVO!
+						CHIEDI IL RIMBORSO DEL<br />SISTEMA OPERATIVO!
 					</h1>
 				</div>
 			</div>
@@ -270,7 +270,7 @@
 	<section id="footer" class="footer">
 		<div class="row">
 			<div class="col-lg-6">
-				<p>Per segnalazioni e contatti scrivi a <a href="mailto:webmaster@linux.it">webmaster@linux.it</a></p>
+				<p>Per segnalazioni e contatti scrivi a <a href="mailto:webmaster@linux.it?subject=Sistema%20INoperativo">webmaster@linux.it</a></p>
 			</div>
 			<div class="col-lg-6 text-right">
 				<p>Powered by <a href="http://www.ils.org/">Italian Linux Society</a></p>
