--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 	<meta property="og:country-name" content="Italy" />
 	<meta property="og:email" content="webmaster@linux.it" />
 	<meta property="og:locale" content="it_IT" />
-	<meta property="og:description" content="Fatti Rimborsare il Sistema (in)Operativo!" />
+	<meta property="og:description" content="Chiedi il rimborso del Sistema (in)Operativo!" />
 
-	<title>fatti rimborsare il sistema (in)operativo!</title>
+	<title>Chiedi il rimborso del sistema (in)operativo!</title>
 
 	<link href="css/bootstrap.css" rel="stylesheet">
 	<link href="css/scrolling-nav.css" rel="stylesheet">
@@ -76,11 +76,11 @@
 					<h3>
 						hai comprato un nuovo PC<br />
 						hai pagato la licenza Windows<br />
-						ma non hai intenzione di usarlo
+						ma non hai intenzione di usarlo?
 					</h3>
 
 					<h1>
-						FATTI RIMBORSARE IL<br />SISTEMA (IN)OPERATIVO!
+						CHIEDI IL RIMBORSO DEL<br />SISTEMA (IN)OPERATIVO!
 					</h1>
 				</div>
 			</div>
@@ -255,7 +255,7 @@
 
 			<div class="row">
 				<div class="col-lg-4 text-center">
-					<a href="https://twitter.com/share?url=http%3A%2F%2Fsistemainoperativo.it%2F&text=sul%20mio%20computer%20non%20voglio%20un%20%23sistemainoperativo%21%20%40ASUSItalia%20%40HP_Italia%20%40AcerItalia%20%40DELL_Italia" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;" target="_blank" alt="Share on Twitter"><img src="img/twitter.png" /></a>
+					<a href="https://twitter.com/share?url=http%3A%2F%2Fsistemainoperativo.it%2F&text=Sul%20mio%20computer%20non%20voglio%20un%20%23sistemainoperativo%21%20%40ASUSItalia%20%40HP_Italia%20%40AcerItalia%20%40DELL_Italia" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;" target="_blank" alt="Share on Twitter"><img src="img/twitter.png" /></a>
 				</div>
 				<div class="col-lg-4 text-center">
 					<a href="http://www.facebook.com/sharer.php?u=http%3A%2F%2Fsistemainoperativo.it%2F" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;" target="_blank" alt="Share on Facebook"><img src="img/facebook.png" /></a>
@@ -270,7 +270,7 @@
 	<section id="footer" class="footer">
 		<div class="row">
 			<div class="col-lg-6">
-				<p>Per segnalazioni e contatti scrivi a <a href="mailto:webmaster@linux.it">webmaster@linux.it</a></p>
+				<p>Per segnalazioni e contatti scrivi a <a href="mailto:webmaster@linux.it?subject=Sistema%20INOperativo">webmaster@linux.it</a></p>
 			</div>
 			<div class="col-lg-6 text-right">
 				<p>Powered by <a href="http://www.ils.org/">Italian Linux Society</a></p>
