aggiunta sezione links

--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
 					<li>
 						<a class="page-scroll" href="#fattisentire">Fatti Sentire!</a>
 					</li>
+					<li>
+						<a class="page-scroll" href="#links">Links</a>
+					</li>
 				</ul>
 			</div>
 		</div>
@@ -119,7 +122,7 @@
 		</div>
 	</section>
 
-	<section id="cosachiediamo" class="services-section">
+	<section id="cosachiediamo" class="request-section">
 		<div class="container">
 			<div class="page-header">
 				<h3 class="text-centered">
@@ -237,7 +240,7 @@
 	</section>
 	-->
 
-	<section id="fattisentire" class="contact-section">
+	<section id="fattisentire" class="voice-section">
 		<div class="container">
 			<div class="page-header">
 				<h3 class="text-centered">
@@ -262,6 +265,34 @@
 				</div>
 				<div class="col-lg-4 text-center">
 					<a href="https://plus.google.com/share?url=http%3A%2F%2Fsistemainoperativo.it%2F" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=350,width=480');return false;" target="_blank" alt="Share on Google+"><img src="img/gplus.png" /></a>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section id="links" class="links-section">
+		<div class="container">
+			<div class="page-header">
+				<h3 class="text-centered">
+					Links
+				</h3>
+			</div>
+
+			<div class="row">
+				<div class="col-lg-4 text-center">
+					<p>
+						Per aggiornamenti periodici sul diritto al rimborso delle licenze di software pre-installato, consulta l'<a href="http://avvertenze.aduc.it/rimborsowindows/">apposito canale sul sito ADUC</a>.
+					</p>
+				</div>
+				<div class="col-lg-4 text-center">
+					<p>
+						Vuoi acquistare direttamente un PC senza licenza? Cerca il più vicino negozio Linux-friendly su <a href="http://www.linuxsi.com/">LinuxSi</a>, o compralo online su <a href="http://www.licfreeshop.com/">License Free Shop</a>!
+					</p>
+				</div>
+				<div class="col-lg-4 text-center">
+					<p>
+						Per maggiori informazioni su Linux, cerca il più vicino <a href="http://lugmap.linux.it/">Linux Users Group</a> o partecipa sabato 25 ottobre al <a href="http://linuxday.it/">Linux Day</a>.
+					</p>
 				</div>
 			</div>
 		</div>
