aggiunti links a modulo di riferimento e form segnalazioni agcm

--- a/index.html
+++ b/index.html
@@ -267,6 +267,13 @@
 					<a href="https://plus.google.com/share?url=http%3A%2F%2Fsistemainoperativo.it%2F" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=350,width=480');return false;" target="_blank" alt="Share on Google+"><img src="img/gplus.png" /></a>
 				</div>
 			</div>
+
+			<div class="row">
+				<br />
+				<div class="col-lg-12 text-center">
+					E se hai chiesto il rimborso della licenza ma hai avuto problemi, segnala la tua esperienza ad AGCM <a href="http://www.agcm.it/invia-segnalazione-online.html">usando questo form</a>: più segnalazioni arrivano, più l'Agenzia sarà indotta a prendere provvedimenti!
+				</div>
+			</div>
 		</div>
 	</section>
 
@@ -286,12 +293,12 @@
 				</div>
 				<div class="col-lg-4 text-center">
 					<p>
-						Vuoi acquistare direttamente un PC senza licenza? Cerca il più vicino negozio Linux-friendly su <a href="http://www.linuxsi.com/">LinuxSi</a>, o compralo online su <a href="http://www.licfreeshop.com/">License Free Shop</a>!
+						Vuoi chiedere il rimborso della licenza ma non sai da che parte iniziare? Usa <a href="http://sosonline.aduc.it/modulo/richiesta+rimborso+microsoft+windows+pre+installato_9461.php">questo modulo</a> come punto di partenza!
 					</p>
 				</div>
 				<div class="col-lg-4 text-center">
 					<p>
-						Per maggiori informazioni su Linux, cerca il più vicino <a href="http://lugmap.linux.it/">Linux Users Group</a> o partecipa sabato 25 ottobre al <a href="http://linuxday.it/">Linux Day</a>.
+						Vuoi acquistare direttamente un PC senza licenza? Cerca il più vicino negozio Linux-friendly su <a href="http://www.linuxsi.com/">LinuxSi</a>, o compralo online su <a href="http://www.licfreeshop.com/">License Free Shop</a>!
 					</p>
 				</div>
 			</div>
