aggiunta lettera per i produttori

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
 						<a class="page-scroll" href="#cosachiediamo">Cosa Chiediamo</a>
 					</li>
 					<li>
+						<a class="page-scroll" href="#appello">L'Appello</a>
+					</li>
+					<li>
 						<a class="page-scroll" href="#fattisentire">Fatti Sentire!</a>
 					</li>
 					<li>
@@ -110,11 +113,19 @@
 						<p>
 							Una grande notizia per tutti coloro che hanno adottato scelte differenti da quelle imposte, ma adesso tale diritto deve essere reso applicabile!
 						</p>
+						<p>&nbsp;</p>
 						<p>
 							Il 17 ottobre 2014 è stata inviata una lettera all'Autorità Garante della Concorrenza e del Mercato (AGCM), in cui si chiede di vigilare sulla trasparenza dei prezzi delle licenze vendute insieme ai computer e delle procedure per chiedere il rimborso.
 						</p>
 						<p class="text-center">
 							<a href="istanza_agcm_rimborso_windows.pdf" class="btn btn-default btn-lg">Leggi la Lettera ad AGCM</a>
+						</p>
+						<p>&nbsp;</p>
+						<p>
+							Il 24 febbraio 2015 abbiamo inviato una lettera a diversi grandi produttori attivi sul mercato italiano, per avere delucidazioni sulla loro posizione e sulle procedure che intendono attivare per garantire il diritto sancito.
+						</p>
+						<p class="text-center">
+							<a href="#appello" class="btn btn-default btn-lg">Leggi le Risposte</a>
 						</p>
 					</div>
 				</div>
@@ -176,69 +187,90 @@
 		</div>
 	</section>
 
-	<!--
-	<section id="chiharisposto" class="contact-section">
+	<section id="appello" class="contact-section">
 		<div class="container">
 			<div class="page-header">
 				<h3 class="text-centered">
-					Chi ha Risposto?
+					L'Appello
 				</h3>
 			</div>
 
 			<div class="row">
-				<div class="col-lg-3 well">
-					<img src="img/hp.png" />
-
-					<p>
-						Nessuna Risposta Pervenuta
-					</p>
-				</div>
-
-				<div class="col-lg-3 well">
-					<img src="img/asus.png" />
-
-					<p>
-						Nessuna Risposta Pervenuta
-					</p>
-				</div>
-
-				<div class="col-lg-3 well">
-					<img src="img/acer.png" />
-
-					<p>
-						Nessuna Risposta Pervenuta
-					</p>
-				</div>
-
-				<div class="col-lg-3 well">
-					<img src="img/dell.png" />
-
-					<p>
-						Nessuna Risposta Pervenuta
-					</p>
+				<div class="col-lg-10 col-lg-offset-1">
+					<blockquote>
+						<p>
+							All'attenzione di ...,
+						</p>
+						<p>
+							scrivo a nome di Italian Linux Society, associazione nazionale per la promozione e la tutela del software libero.
+						</p>
+						<p>
+							L'11 settembre 2014 è stata depositata la sentenza n. 19161/2014 della Suprema Corte di Cassazione, che riconosce il diritto di chi acquista un nuovo computer a ricevere un rimborso sull'eventuale software pre-installato seppur non richiesto, con particolare riferimento al sistema operativo. In data 16 ottobre l'Associazione Diritti Utenti e Consumatori ha presentato un sollecito all'Autorità Garante della Concorrenza e del Mercato, co-firmato da Italian Linux Society e Free Software Foundation Europe, sulla necessità di vigilare affinché tale diritto sia assecondato dai produttori entro canoni di ragionevole accessibilità.
+						</p>
+						<p>
+							A fronte di tali eventi, ed in virtù del forte interesse di molti consumatori sulla possibilità di non dover più versare la "tassa Microsoft" che da anni viene tacitamente applicata sull'acquisto di quasi ogni computer messo in commercio - scegliendo consapevolmente di adottare sistemi alternativi al canonico Windows, come il sempre più popolare GNU/Linux nelle sue numerose varianti -, scrivo per avere una posizione ufficiale a tal riguardo da parte della vostra azienda.
+						</p>
+						<p>
+							Più nello specifico, vorrei chiedere:
+						</p>
+						<ul>
+							<li>se avete intenzione di uniformarvi alla sentenza della Corte di Cassazione, garantendo il rimborso delle licenze di software pre-installato su tutti i vostri prodotti destinati al mercato consumer</li>
+							<li>se avete già predisposto una procedura per richiedere ed ottenere il rimborso, e se sì dove si possono trovare maggiori informazioni per accedervi</li>
+							<li>a titolo di riferimento, a quanto corrisponde secondo il vostro listino il rimborso di una licenza Windows 8.1</li>
+						</ul>
+						<p>
+							La risposta che verrà data a questa lettera sarà pubblicata sul sito www.sistemainoperativo.it, utilizzato per informare il pubblico sul diritto recentemente riconosciuto e, appunto, sull'effettiva ricezione da parte dei maggiori produttori di computer che operano in Italia.
+						</p>
+						<p>
+							Restiamo in attesa di un riscontro e sono naturalmente a disposizione per eventuali commenti ed approfondimenti sul tema.
+						</p>
+						<p>
+							Grazie per l'attenzione e la disponibilità.
+						</p>
+						<p>
+							Cordiali saluti.
+						</p>
+					</blockquote>
 				</div>
 			</div>
 
-			<div class="row">
-				<div class="jumbotron">
-					<h1>Sollecitali!</h1>
+			<br />
 
-					<div class="row">
-						<div class="col-lg-4 text-center">
-							TWEET
-						</div>
-						<div class="col-lg-4 text-center">
-							FACEBOOK
-						</div>
-						<div class="col-lg-4 text-center">
-							GOOGLE+
-						</div>
-					</div>
+			<div class="row">
+				<div class="col-lg-3">
+					<img src="img/hp.png" />
+
+					<p class="alert alert-warning text-center">
+						Nessuna Risposta Pervenuta
+					</p>
+				</div>
+
+				<div class="col-lg-3">
+					<img src="img/asus.png" />
+
+					<p class="alert alert-warning text-center">
+						Nessuna Risposta Pervenuta
+					</p>
+				</div>
+
+				<div class="col-lg-3">
+					<img src="img/acer.png" />
+
+					<p class="alert alert-warning text-center">
+						Nessuna Risposta Pervenuta
+					</p>
+				</div>
+
+				<div class="col-lg-3">
+					<img src="img/dell.png" />
+
+					<p class="alert alert-warning text-center">
+						Nessuna Risposta Pervenuta
+					</p>
 				</div>
 			</div>
 		</div>
 	</section>
-	-->
 
 	<section id="fattisentire" class="voice-section">
 		<div class="container">
