aggiunta risposta di Asus

--- a/index.html
+++ b/index.html
@@ -249,7 +249,27 @@
 					<img src="img/asus.png" />
 
 					<p class="alert alert-warning text-center">
-						Nessuna Risposta Pervenuta
+						Risposta Pervenuta (via telefono)
+					</p>
+
+					<p class="alert alert-success">
+						<span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span> E' prevista una procedura di rimborso
+					</p>
+
+					<p class="alert alert-danger">
+						<span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span> Non è riportata sul sito
+					</p>
+
+					<p class="alert alert-success">
+						<span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span> Non occorre inviare il PC
+					</p>
+
+					<p class="alert alert-danger">
+						<span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span> Rimborso tra i 9 ed i 65 euro, a seconda della versione di Windows
+					</p>
+
+					<p class="alert alert-info">
+						<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Inviare una mail a info@asus.it indicando il seriale del PC e le proprie coordinate bancarie, entro 30 giorni dall'acquisto e senza aver accettato la EULA alla prima accesione della macchina
 					</p>
 				</div>
 
@@ -290,7 +310,7 @@
 
 			<div class="row">
 				<div class="col-lg-4 text-center">
-					<a href="https://twitter.com/share?url=http%3A%2F%2Fsistemainoperativo.it%2F&text=Sul%20mio%20computer%20non%20voglio%20un%20%23sistemainoperativo%21%20%40ASUSItalia%20%40HP_Italia%20%40AcerItalia%20%40DELL_Italia" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;" target="_blank" alt="Share on Twitter"><img src="img/twitter.png" /></a>
+					<a href="https://twitter.com/share?url=http%3A%2F%2Fsistemainoperativo.it%2F&text=Sul%20mio%20computer%20non%20voglio%20un%20%23sistemainoperativo%21%20%40HP_Italia%20%40AcerItalia%20%40DELL_Italia" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;" target="_blank" alt="Share on Twitter"><img src="img/twitter.png" /></a>
 				</div>
 				<div class="col-lg-4 text-center">
 					<a href="http://www.facebook.com/sharer.php?u=http%3A%2F%2Fsistemainoperativo.it%2F" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;" target="_blank" alt="Share on Facebook"><img src="img/facebook.png" /></a>
