aggiunti dettagli su HP, Acer e Dell

--- a/index.html
+++ b/index.html
@@ -243,6 +243,14 @@
 					<p class="alert alert-warning text-center">
 						Nessuna Risposta Pervenuta
 					</p>
+
+					<p class="alert alert-danger">
+						<span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span> Non è prevista una procedura di rimborso
+					</p>
+
+					<p class="alert alert-info">
+						<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Diversi tentativi di contatto sono stati effettuati da diversi clienti, e sono sempre stati ignorati dall'azienda.
+					</p>
 				</div>
 
 				<div class="col-lg-3">
@@ -277,7 +285,23 @@
 					<img src="img/acer.png" />
 
 					<p class="alert alert-warning text-center">
-						Nessuna Risposta Pervenuta
+						Risposta Pervenuta (via telefono)
+					</p>
+
+					<p class="alert alert-success">
+						<span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span> E' prevista una procedura di rimborso
+					</p>
+
+					<p class="alert alert-success">
+						<span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span> E' riportata <a href="http://www.acer.it/ac/it/IT/content/rimborso">sul sito</a>
+					</p>
+
+					<p class="alert alert-danger">
+						<span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span> Occorre inviare il PC
+					</p>
+
+					<p class="alert alert-info">
+						<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Sul sito si trovano i moduli da compilare e spedire.
 					</p>
 				</div>
 
@@ -285,7 +309,15 @@
 					<img src="img/dell.png" />
 
 					<p class="alert alert-warning text-center">
-						Nessuna Risposta Pervenuta
+						Risposta Pervenuta (via Twitter)
+					</p>
+					
+					<p class="alert alert-danger">
+						<span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span> Non è prevista una procedura di rimborso
+					</p>
+					
+					<p class="alert alert-info">
+						<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Il <a href="http://www.dell.com/learn/it/it/itcorp1/solutions/art-consumer-dell-emea-consumer-direct-ts-and-cs-010111-it?c=it&l=it&s=corp">contratto di termini e condizioni d'uso</a>, all'articolo 7.3 dichiara esplicitamente che in caso di mancata approvazione della licenza del sistema operativo il computer deve essere restituito.
 					</p>
 				</div>
 			</div>
