aggiunta segnalazione Lenovo

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 
 			<div class="row">
 				<div class="col-lg-4 text-center">
-					<a href="https://twitter.com/share?url=http%3A%2F%2Fsistemainoperativo.it%2F&text=Sul%20mio%20computer%20non%20voglio%20un%20%23sistemainoperativo%21%20%40HP_Italia%20%40AcerItalia%20%40DELL_Italia" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;" target="_blank" alt="Share on Twitter"><img src="img/twitter.png" /></a>
+					<a href="https://twitter.com/share?url=http%3A%2F%2Fsistemainoperativo.it%2F&text=Sul%20mio%20computer%20non%20voglio%20un%20%23sistemainoperativo%21%20%40HP_Italia%20%40LenovoItalia%20%40DELL_Italia%20%40Antitrust_it" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;" target="_blank" alt="Share on Twitter"><img src="img/twitter.png" /></a>
 				</div>
 				<div class="col-lg-4 text-center">
 					<a href="http://www.facebook.com/sharer.php?u=http%3A%2F%2Fsistemainoperativo.it%2F" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;" target="_blank" alt="Share on Facebook"><img src="img/facebook.png" /></a>
@@ -354,8 +354,41 @@
 
 			<div class="row">
 				<br />
-				<div class="col-lg-12 text-center">
-					E se hai chiesto il rimborso della licenza ma hai avuto problemi, segnala la tua esperienza ad AGCM <a href="http://www.agcm.it/invia-segnalazione-online.html">usando questo form</a>: più segnalazioni arrivano, più l'Agenzia sarà indotta a prendere provvedimenti!
+				<div class="col-lg-12">
+					<p>
+						Se hai chiesto il rimborso della licenza ma hai avuto problemi:
+					</p>
+					<ul>
+						<li><a href="http://www.agcm.it/contatti.html">segnala la tua esperienza ad AGCM</a>: più segnalazioni arrivano, più l'Agenzia sarà indotta a prendere provvedimenti!</li>
+						<li><a href="mailto:webmaster@linux.it">mandaci una mail</a> con la documentazione relativa, da pubblicare su questo sito e mettere in guardia gli altri consumatori sui comportamenti dei singoli distributori</li>
+					</ul>
+				</div>
+			</div>
+			
+			<div class="row">
+				<br />
+				<div class="col-lg-12">
+					<h4>Segnalazioni Ricevute</h4>
+
+					<table class="table">
+						<thead>
+							<tr>
+								<th>Segnalato da</th>
+								<th>Distributore Coinvolto</th>
+								<th>Note e Documenti Allegati</th>
+							</tr>
+						</thead>
+						
+						<tbody>
+							<tr>
+								<td>Paolo Cavallini</td>
+								<td>Lenovo</td>
+								<td>
+									<a href="documenti/cavallini_lenovo_1.pdf">Prima risposta di Lenovo</a>, <a href="documenti/cavallini_lenovo_2.pdf">Seconda risposta di Lenovo</a>
+								</td>
+							</tr>
+						</tbody>
+					</table>
 				</div>
 			</div>
 		</div>
