--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 						<a class="page-scroll" href="#cosachiediamo">Cosa Chiediamo</a>
 					</li>
 					<li>
-						<a class="page-scroll" href="#appello">L'Appello</a>
+						<a class="page-scroll" href="#produttori">I Produttori</a>
 					</li>
 					<li>
 						<a class="page-scroll" href="#fattisentire">Fatti Sentire!</a>
@@ -125,7 +125,7 @@
 							Il 24 febbraio 2015 abbiamo inviato una lettera a diversi grandi produttori attivi sul mercato italiano, per avere delucidazioni sulla loro posizione e sulle procedure che intendono attivare per garantire il diritto sancito.
 						</p>
 						<p class="text-center">
-							<a href="#appello" class="btn btn-default btn-lg">Leggi le Risposte</a>
+							<a href="#produttori" class="btn btn-default btn-lg">Leggi le Risposte</a>
 						</p>
 					</div>
 				</div>
@@ -187,50 +187,19 @@
 		</div>
 	</section>
 
-	<section id="appello" class="contact-section">
+	<section id="produttori" class="contact-section">
 		<div class="container">
 			<div class="page-header">
 				<h3 class="text-centered">
-					L'Appello
+					I Produttori
 				</h3>
 			</div>
 
 			<div class="row">
-				<div class="col-lg-10 col-lg-offset-1">
-					<blockquote>
-						<p>
-							All'attenzione di ...,
-						</p>
-						<p>
-							scrivo a nome di Italian Linux Society, associazione nazionale per la promozione e la tutela del software libero.
-						</p>
-						<p>
-							L'11 settembre 2014 è stata depositata la sentenza n. 19161/2014 della Suprema Corte di Cassazione, che riconosce il diritto di chi acquista un nuovo computer a ricevere un rimborso sull'eventuale software pre-installato seppur non richiesto, con particolare riferimento al sistema operativo. In data 16 ottobre l'Associazione Diritti Utenti e Consumatori ha presentato un sollecito all'Autorità Garante della Concorrenza e del Mercato, co-firmato da Italian Linux Society e Free Software Foundation Europe, sulla necessità di vigilare affinché tale diritto sia assecondato dai produttori entro canoni di ragionevole accessibilità.
-						</p>
-						<p>
-							A fronte di tali eventi, ed in virtù del forte interesse di molti consumatori sulla possibilità di non dover più versare la "tassa Microsoft" che da anni viene tacitamente applicata sull'acquisto di quasi ogni computer messo in commercio - scegliendo consapevolmente di adottare sistemi alternativi al canonico Windows, come il sempre più popolare GNU/Linux nelle sue numerose varianti -, scrivo per avere una posizione ufficiale a tal riguardo da parte della vostra azienda.
-						</p>
-						<p>
-							Più nello specifico, vorrei chiedere:
-						</p>
-						<ul>
-							<li>se avete intenzione di uniformarvi alla sentenza della Corte di Cassazione, garantendo il rimborso delle licenze di software pre-installato su tutti i vostri prodotti destinati al mercato consumer</li>
-							<li>se avete già predisposto una procedura per richiedere ed ottenere il rimborso, e se sì dove si possono trovare maggiori informazioni per accedervi</li>
-							<li>a titolo di riferimento, a quanto corrisponde secondo il vostro listino il rimborso di una licenza Windows 8.1</li>
-						</ul>
-						<p>
-							La risposta che verrà data a questa lettera sarà pubblicata sul sito www.sistemainoperativo.it, utilizzato per informare il pubblico sul diritto recentemente riconosciuto e, appunto, sull'effettiva ricezione da parte dei maggiori produttori di computer che operano in Italia.
-						</p>
-						<p>
-							Restiamo in attesa di un riscontro e sono naturalmente a disposizione per eventuali commenti ed approfondimenti sul tema.
-						</p>
-						<p>
-							Grazie per l'attenzione e la disponibilità.
-						</p>
-						<p>
-							Cordiali saluti.
-						</p>
-					</blockquote>
+				<div class="col-lg-12">
+					<p>
+						Di seguito trovi informazioni sul comportamento di alcuni dei principali produttori di PC operativi in Italia. Quando fai un acquisto, scegli di premiare coloro che più si impegnano per rispettare la tua libertà di scelta!
+					</p>
 				</div>
 			</div>
 
@@ -239,10 +208,6 @@
 			<div class="row">
 				<div class="col-lg-3">
 					<img src="img/hp.png" />
-
-					<p class="alert alert-warning text-center">
-						Nessuna Risposta Pervenuta
-					</p>
 
 					<p class="alert alert-danger">
 						<span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span> Non è prevista una procedura di rimborso
@@ -255,10 +220,6 @@
 
 				<div class="col-lg-3">
 					<img src="img/asus.png" />
-
-					<p class="alert alert-warning text-center">
-						Risposta Pervenuta (via telefono)
-					</p>
 
 					<p class="alert alert-success">
 						<span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span> E' prevista una procedura di rimborso
@@ -284,10 +245,6 @@
 				<div class="col-lg-3">
 					<img src="img/acer.png" />
 
-					<p class="alert alert-warning text-center">
-						Risposta Pervenuta (via telefono)
-					</p>
-
 					<p class="alert alert-success">
 						<span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span> E' prevista una procedura di rimborso
 					</p>
@@ -307,10 +264,6 @@
 
 				<div class="col-lg-3">
 					<img src="img/dell.png" />
-
-					<p class="alert alert-warning text-center">
-						Risposta Pervenuta (via Twitter)
-					</p>
 					
 					<p class="alert alert-danger">
 						<span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span> Non è prevista una procedura di rimborso
