aggiornato link a condizioni d'uso Dell. closes #3

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 					</p>
 					
 					<p class="alert alert-info">
-						<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Il <a href="http://www.dell.com/learn/it/it/itcorp1/solutions/art-consumer-dell-emea-consumer-direct-ts-and-cs-010111-it?c=it&l=it&s=corp">contratto di termini e condizioni d'uso</a>, all'articolo 7.3 dichiara esplicitamente che in caso di mancata approvazione della licenza del sistema operativo il computer deve essere restituito.
+						<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Il <a href="http://www.dell.com/learn/it/it/itcorp1/terms-conditions/art-consumer-dell-emea-consumer-direct-ts-and-cs-010111-it">contratto di termini e condizioni d'uso</a>, all'articolo 7.3 dichiara esplicitamente che in caso di mancata approvazione della licenza del sistema operativo il computer deve essere restituito.
 					</p>
 				</div>
 			</div>
