aggiunta documentazione sui casi Bonissi/Mediacom e Bonissi/Microsoft

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 								<td>Paolo Cavallini</td>
 								<td>Lenovo</td>
 								<td>
-								    Paolo ha richiesto il rimborso della licenza sul suo nuovo computer Lenovo, ricevendo sempre e solo dinieghi. Senza riscontro risulta anche la sua segnalazione mossa ad AGCM.<br>
+									Paolo ha richiesto il rimborso della licenza sul suo nuovo computer Lenovo, ricevendo sempre e solo dinieghi. Senza riscontro risulta anche la sua segnalazione mossa ad AGCM.<br>
 									<a href="documenti/cavallini_lenovo_1.pdf">Prima risposta di Lenovo</a>, <a href="documenti/cavallini_lenovo_2.pdf">Seconda risposta di Lenovo</a>
 								</td>
 							</tr>
@@ -372,8 +372,26 @@
 								<td>ITfor s.r.l.</td>
 								<td>Acer</td>
 								<td>
-								    A seguito di ripetuti contatti telefonici senza esito, la società ITfor di Torino ha portato Acer Italia davanti al Giudice di Pace contestando le modalità di rimborso della licenza (spedizione del computer acquistato, con spese a carico del cliente, e rimborso insufficiente). Dopo diverse udienze e rinvii, Acer Italia ha concesso il pagamento di 50 euro + 100 euro per le spese legali sostenute.<br>
+									A seguito di ripetuti contatti telefonici senza esito, la società ITfor di Torino ha portato Acer Italia davanti al Giudice di Pace contestando le modalità di rimborso della licenza (spedizione del computer acquistato, con spese a carico del cliente, e rimborso insufficiente). Dopo diverse udienze e rinvii, Acer Italia ha concesso il pagamento di 50 euro + 100 euro per le spese legali sostenute.<br>
 									<a href="documenti/itfor_acer_citazione.pdf">Atto di Citazione</a>, <a href="documenti/itfor_acer_conciliazione.pdf">Verbale di Conciliazione</a>, <a href="documenti/itfor_acer_completo.tar.gz">Documentazione Completa</a>
+								</td>
+							</tr>
+							<tr>
+							    <td><span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span></td>
+								<td>Luca Bonissi</td>
+								<td>Mediacom</td>
+								<td>
+									Dopo aver acquistato un PC Mediacom, Luca si è rivolto direttamente a Datamatic S.p.A. (azienda cui fa capo il brand Mediacom) per richiedere il rimborso della licenza Windows. Solo dopo l'atto di citazione, e poco prima dell'udienza, gli è stata offerta una transazione privata e gli è stato riconosciuto un rimborso di 44 euro.<br>
+									<a href="documenti/bonissi_mediacom_completo.tar.gz">Documentazione Completa</a>
+								</td>
+							</tr>
+							<tr>
+							    <td><span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span></td>
+								<td>Luca Bonissi</td>
+								<td>Microsoft</td>
+								<td>
+									Dopo qualche (ovvia...) insistenza, Microsoft S.r.l. (che rappresenta Microsoft in Italia) ha messo in contatto Luca con il Supporto Tecnico Microsoft, che effettivamente prevede una procedura di rimborso della licenza Windows sui prodotti venduti dall'azienda (nella fattispecie, un Microsoft Surface). Dopo diverse mail e comunicazioni si è giunti al rimborso di 43 euro.<br>
+									<a href="documenti/bonissi_microsoft_completo.tar.gz">Documentazione Completa</a>
 								</td>
 							</tr>
 						</tbody>
