--- a/index.html
+++ b/index.html
@@ -318,14 +318,11 @@
 			</div>
 
 			<div class="row">
-				<div class="col-lg-4 text-center">
+				<div class="col-lg-3 col-lg-offset-3 text-center">
 					<a href="https://twitter.com/share?url=http%3A%2F%2Fsistemainoperativo.it%2F&text=Sul%20mio%20computer%20non%20voglio%20un%20%23sistemainoperativo%21%20%40Antitrust_it" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;" target="_blank" alt="Share on Twitter"><img src="img/twitter.png" /></a>
 				</div>
-				<div class="col-lg-4 text-center">
+				<div class="col-lg-3 text-center">
 					<a href="http://www.facebook.com/sharer.php?u=http%3A%2F%2Fsistemainoperativo.it%2F" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;" target="_blank" alt="Share on Facebook"><img src="img/facebook.png" /></a>
-				</div>
-				<div class="col-lg-4 text-center">
-					<a href="https://plus.google.com/share?url=http%3A%2F%2Fsistemainoperativo.it%2F" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=350,width=480');return false;" target="_blank" alt="Share on Google+"><img src="img/gplus.png" /></a>
 				</div>
 			</div>
 
@@ -422,7 +419,7 @@
 				</div>
 				<div class="col-lg-4 text-center">
 					<p>
-						Vuoi acquistare direttamente un PC senza licenza? Cerca il più vicino negozio Linux-friendly su <a href="http://www.linuxsi.com/">LinuxSi</a>, o compralo online su <a href="http://www.licfreeshop.com/">License Free Shop</a>!
+						Vuoi acquistare direttamente un PC senza licenza? Cerca il più vicino negozio Linux-friendly su <a href="http://www.linuxsi.com/">LinuxSi</a>!
 					</p>
 				</div>
 			</div>
